[gd_scene load_steps=7 format=3 uid="uid://cvjd4v36oqehe"]

[ext_resource type="Script" uid="uid://p1udj4ifnu0d" path="res://Scripts/main.gd" id="1_8gbba"]
[ext_resource type="PackedScene" uid="uid://d33h8bo7gtby6" path="res://Scenes/background.tscn" id="1_jjgbg"]
[ext_resource type="PackedScene" uid="uid://0r3wlbefbvcl" path="res://Scenes/asteroid.tscn" id="2_21xkr"]
[ext_resource type="PackedScene" uid="uid://bcvkuddrqymwy" path="res://Scenes/player.tscn" id="3_8gbba"]
[ext_resource type="PackedScene" uid="uid://btttrkuv0ikhh" path="res://Scenes/menu.tscn" id="4_jjvhh"]
[ext_resource type="PackedScene" uid="uid://jq1jm5tkk161" path="res://Scenes/hud.tscn" id="5_kry3j"]

[node name="Main" type="Node"]
script = ExtResource("1_8gbba")
asteroid_scene = ExtResource("2_21xkr")

[node name="Background" parent="." instance=ExtResource("1_jjgbg")]

[node name="Player" parent="." instance=ExtResource("3_8gbba")]

[node name="Menu" parent="." instance=ExtResource("4_jjvhh")]
process_mode = 2

[node name="HUD" parent="." instance=ExtResource("5_kry3j")]

[node name="AsteroidTimer" type="Timer" parent="."]

[connection signal="start_game" from="Menu" to="." method="_on_menu_start_game"]
[connection signal="update_score" from="Menu" to="HUD" method="update_score"]
[connection signal="timeout" from="AsteroidTimer" to="." method="_on_asteroid_timer_timeout"]
